--- a/limits-service/src/main/resources/application.properties
+++ b/limits-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.config.import=optional:configserver:https://localhost:8888
+spring.application.name=limit-service
+spring.config.import=optional:configserver:http://localhost:8888
 limits.service.min=1
 limits.service.max=5
