--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=currency-conversion-service
 spring.config.import=optional:configserver:http://localhost:8888
 server.port=8100
+
+
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
